...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3961a3"
    tools:context="com.cmsc355.ccnd.gymrat.CustomWorkout">

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:layout_marginEnd="22dp"
...
            android:background="#000000"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:text="Biceps" />

        <Button
            android:id="@+id/Triceps"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
...
