...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalorieCounter" />

    <Button
        android:id="@+id/CreateCustomWorkout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:background="#565555"
        android:onClick="createWorkoutClick"
        android:text="Create Custom Workout"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LiftingTips"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
...
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/LiftingTips"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/WeightTracker"
        android:layout_alignBottom="@+id/WeightTracker"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/CreateCustomWorkout"
        android:background="#565555"
...
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_toStartOf="@+id/MyProfile"
        android:background="#565555"
        android:onClick="weightClick"
        android:text="Weight Tracker"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MyProfile"
        app:layout_constraintStart_toEndOf="@+id/LiftingTips"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
...
