...
        completions."
    </string>
    <string name="title_activity_custom_workout_exercises">CustomWorkoutExercises</string>
    <string name="title_activity_tips_for_exercise">TipsForExercise</string>

    <!-- String for My profile -->
    <string name="MyProfile"><u>My Profile:</u></string>

    <!-- String for Add Workout -->

    <string name="weight_of_equipment">equipment</string>
    <string name="num_of_sets">sets</string>
    <string name="weight_tracker">Weight Tracker</string>
...
