...
        app:layout_constraintTop_toBottomOf="@+id/Age"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="52dp"
        android:onClick="logoutClick"
        android:text="Logout"
...
