<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmsc355.ccnd.gymrat.WeightTracker">

    <Button
        android:id="@+id/submit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="150dp"
        android:onClick="submitClick"
        android:text="Submit" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"

        android:ems="10"
        android:hint="Weight"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:text="@string/weight_tracker"
        android:textSize="50sp"
        android:textAlignment="center"/>


</android.support.design.widget.CoordinatorLayout>
